# runtime

./: .gitignore  .metadata  CMakeLists.txt  README.md  ffigen.yaml  flake.nix  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/expidus/expidus_runtime/: ExpidusRuntimePlugin.kt
cmake/: ExpidusRuntime.cmake  ExpidusRuntimePackageSetup.cmake
compositor/: CMakeLists.txt  README.md  ffigen.yaml  pubspec.yaml
compositor/android/: build.gradle  settings.gradle
compositor/android/src/main/: AndroidManifest.xml
compositor/android/src/main/kotlin/com/expidus/runtime/compositor/: Plugin.kt
compositor/cmake/: ExpidusRuntimeCompositor.cmake
compositor/include/expidus/runtime/: compositor.h  compositor.h.gch
compositor/linux/: CMakeLists.txt  plugin.cc
compositor/linux/include/expidus/runtime/: compositor.h
compositor/linux/include/expidus/runtime/compositor/: backend.h  input.h  output.h  renderer.h
compositor/linux/include/expidus/runtime/compositor/backend/wlroots/: backend.h  error.h  input.h  output.h
compositor/linux/include/expidus/runtime/compositor/backend/wlroots/input/: keyboard.h  mouse.h
compositor/linux/include/expidus/runtime/compositor/backend/xcb/: backend.h
compositor/linux/include/expidus/runtime/compositor/input/: keyboard.h  mouse.h
compositor/linux/include/expidus/runtime/compositor/renderer/egl/: error.h  renderer.h  scene-layer.h  shader.h
compositor/linux/include/expidus/runtime/compositor/rendering/: scene-layer.h  scene.h
compositor/linux/include/expidus_runtime_compositor/: expidus_runtime_compositor_linux.h
compositor/linux/src/: backend-priv.h  backend.c  compositor-priv.h  compositor.c  input-priv.h  input.c  output-priv.h  output.c  renderer-priv.h  renderer.c
compositor/linux/src/backend/wlroots/: backend-priv.h  backend.c  error-priv.h  error.c  input-priv.h  input.c  output-priv.h  output.c
compositor/linux/src/backend/wlroots/input/: keyboard-priv.h  keyboard.c  mouse-priv.h  mouse.c
compositor/linux/src/backend/xcb/: backend-priv.h  backend.c
compositor/linux/src/input/: keyboard.c  mouse.c
compositor/linux/src/renderer/egl/: error-priv.h  error.c  renderer-priv.h  renderer.c  scene-layer-priv.h  scene-layer.c  shader-priv.h  shader.c
compositor/linux/src/rendering/: scene-layer-priv.h  scene-layer.c  scene-priv.h  scene.c
compositor/macos/: expidus_runtime_compositor.podspec
compositor/macos/Classes/: ExpidusRuntimeCompositorPlugin.swift
compositor/runner/linux/: main.c
compositor/src/: runtime.c
compositor/windows/: CMakeLists.txt  expidus_runtime_compositor_plugin.cpp  expidus_runtime_compositor_plugin.h  expidus_runtime_compositor_plugin_c_api.cpp
compositor/windows/include/expidus_runtime_compositor/: expidus_runtime_compositor_plugin_c_api.h
example/: README.md  default.nix  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/expidus/expidus_runtime_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/expidus/runtime/example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
include/expidus/: runtime.h
lib/: expidus_runtime.dart  expidus_runtime_method_channel.dart  expidus_runtime_platform_interface.dart  expidus_runtime_web.dart
linux/: CMakeLists.txt  expidus_runtime_plugin.cc
linux/include/expidus_runtime/: expidus_runtime_plugin.h
macos/: expidus_runtime.podspec
macos/Classes/: ExpidusRuntimePlugin.swift
test/: expidus_runtime_method_channel_test.dart  expidus_runtime_test.dart
windows/: CMakeLists.txt  expidus_runtime_plugin.cpp  expidus_runtime_plugin.h  expidus_runtime_plugin_c_api.cpp
windows/include/expidus_runtime/: expidus_runtime_plugin_c_api.h
